# render-bat

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  STYLE.md  buffer.h  camera.cpp  camera.h  cubemap.cpp  main.cpp  offscreen.h  shader.cpp  shader.h  state.cpp  state.h  window.h
.github/workflows/: cmake.yml
lib/glad/: CMakeLists.txt  glad.cc  glad.h
shaders/: cubemap.glsl  default.glsl
src/: buffer.cc  buffer.cpp  buffer.h  camera.cc  camera.cpp  camera.h  constants.h  cubemap.cc  cubemap.h  main.cc  main.cpp  offscreen.cc  offscreen.cpp  offscreen.h  shader.cc  shader.cpp  shader.h  state.cpp  state.h  vertex.h  window.cc  window.cpp  window.h  world.cc  world.h
